kubernetes-ingress/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"IngressClass","metadata":{"annotations":{},"name":"nginx"},"spec":{"controller":"nginx.org/ingress-controller"}}
  name: nginx
spec:
  controller: nginx.org/ingress-controller
