kubernetes-ingress/appprotect_arbitrator_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"svc-appprotect-dos-arb","namespace":"nginx-ingress"},"spec":{"clusterIP":"None","ports":[{"name":"arb","port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"appprotect-dos-arb"}}}
  name: svc-appprotect-dos-arb
  namespace: nginx-ingress
spec:
  clusterIP: None
  ports:
  - name: arb
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: appprotect-dos-arb
