kubernetes-ingress/ingress_service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    nodePort: 31000
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    nodePort: 32000
    targetPort: 443
  selector:
    app: nginx-ingress
  type: NodePort
